2006-04-24 [colin]	2.1.1cvs9-stable

	* src/compose.c
	* src/ldaputil.c
	* src/summaryview.c
		From 2.1.1cvs29 and 2.1.1cvs30
		Fix logic on error when send dialog is on
		Fix possible free of uninitialized value
		Fix 'context-menu' key

2006-04-23 [colin]	2.1.1cvs8-stable

	* src/folder.c
		From 2.1.1cvs28
		Fix bug #912 (new count randomly set to
		message count)

2006-04-23 [colin]	2.1.1cvs7-stable

	* src/gtk/quicksearch.c
		From 2.1.1cvs26+27
		Fix replacing in quicksearch, and fix inserting
		in the middle of the string. (introduced at 
		2.1.0cvs6-stable)

2006-04-21 [colin]	2.1.1cvs6-stable

	* src/folderview.c
	* src/mainwindow.c
	* src/common/utils.c
		From 2.1.1cvs21
		Fix bug #943 (Incorrectly parsed email address 
		list in short headers on message view and in 
		printouts), and fix occasional folder flicker

2006-04-20 [colin]	2.1.1cvs5-stable

	* src/prefs_matcher.c
		From 2.1.1cvs16
		Fix ~test and test conditions not updating
		properly

2006-04-20 [colin]	2.1.1cvs4-stable

	* src/gtk/gtksctree.c
		From 2.1.1cvs13
		Fix flicker in summaryview

2006-04-17 [colin]	2.1.1cvs3-stable

	* configure.ac
		From 2.1.1cvs11
		Fix search on encrpyt function on dragonfly

2006-04-17 [colin]	2.1.1cvs2-stable

	* src/prefs_account.c
		From 2.1.1cvs10
		By default, leave mails for 7 days on the server

2006-04-17 [colin]	2.1.1cvs1-stable

	* src/etpan/imap-thread.c
		From 2.1.1cvs9
		Fix build on DragonFly

2006-04-17 [paul]	2.1.1

	2.1.1 released

2006-04-17 [paul]	2.1.0cvs20-stable

	* po/cs.po
	* po/de.po
	* po/es.po
	* po/fr.po
	* po/nl.po
	* po/pt_BR.po
		updated by Tim, Stephan Sachse, Ricardo Mones Lastra,
		Fabien Vantard, Tim Dijkstra, and Frederico Goncalves
		Guimaraes

2006-04-15 [colin]	2.1.0cvs19-stable

	* src/etpan/imap-thread.c
		From 2.1.0cvs48
		Fix bug #919 (libetpan: SEGV when connecting 
		using command)

2006-04-14 [wwp]	2.1.0cvs18-stable

	* manual/advanced.xml
	* manual/faq.xml
	* manual/glossary.xml
	* manual/handling.xml