@@ -1,3 +1,11 @@
+2006-04-25 [paul]	2.1.1cvs10-stable
+
+	* src/folder.c
+	* src/folder.h
+	* src/folderview.c
+		complete the fix of bug #912
+		Thanks to Colin
+
 2006-04-24 [colin]	2.1.1cvs9-stable
 
 	* src/compose.c
